--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  file_picker: ^8.1.2
   flutter_bloc: ^8.1.6
   go_router: ^14.2.0
+  image_picker: ^1.1.2
   math_expressions: ^2.6.0
   meta: ^1.12.0
   path_provider: ^2.1.4
