--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   file_picker: ^8.1.2
   flutter_bloc: ^8.1.6
+  flutter_tesseract_ocr: ^0.4.26
+  get_it: ^7.7.0
   go_router: ^14.2.0
   image_picker: ^1.1.2
   math_expressions: ^2.6.0
