--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   image_picker: ^1.1.2
   math_expressions: ^2.6.0
   meta: ^1.12.0
+  path: ^1.9.0
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.2
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
