--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  encrypt: ^5.0.3
   file_picker: ^8.1.2
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
